# AI-Powered-Outreach-and-Lead-Generation-Platform

./: README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  create_assignment_table.py  pyproject.toml  seed_outreach.py
backend/alembic/: README  env.py
backend/alembic/versions/: 12cac90ab4e3_add_leadcampaignassignment.py  1fc310d6abb8_add_campaigns_campaign_settings_lead_.py  2026_05_31_initial_lead_schema.py  31657956de04_add_platform_settings_brand_voice_.py  baecc2703398_add_lead_qualification_and_cleanup_.py  fdd6667c4f63_update_lead_columns_to_text.py
backend/app/: main.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/db/: base.py  session.py
backend/app/middlewares/: logging.py
backend/app/models/: base.py  campaign.py  enums.py  lead.py  lead_campaign_assignment.py  lead_outreach_message.py  platform_settings.py
backend/app/repositories/: base_repository.py  campaign_assignment_repository.py  campaign_repository.py  lead_repository.py  outreach_message_repository.py  platform_settings_repository.py
backend/app/schemas/: campaign.py  campaign_assignment.py  health.py  lead.py  outreach_message.py  platform_settings.py
backend/app/services/: apify_places_service.py  base_service.py  campaign_assignment_service.py  campaign_service.py  email_generation_service.py  google_places.py  lead_cleanup_service.py  lead_qualification_service.py  lead_service.py  platform_settings_service.py
backend/docker/postgres/: init.sql
backend/tests/: conftest.py  test_health.py  test_leads.py
(+73 files in other folders)
